welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:3: error: forward reference extends over definition of variable Tab
var Tab = new Array[Color](X);
                           ^