welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
var Tab = new Array[Color](X);
val X= getMondeHauteur()
getCouleurSol()
for( i<-0 to Tab.length-1){avance(); getCouleurSol()}
}
